# assetflow

./: .gitignore  README.md  main.py  pyproject.toml
examples/: medical_pipeline_example.ipynb
examples/medical_follow_up/data/raw/: appointments.csv  generate_simulated_data.py  glucometers.csv
examples/medical_follow_up/data/raw/glycemia/: 2015.csv  2016.csv  2017.csv  2018.csv  2019.csv  2020.csv
examples/medical_follow_up/data/raw/patients/: 2.csv
scripts/: publish.py  render_project_tree.py
src/assetflow/: __init__.py  asset.py  combiner.py  combiners.py  dependency.py  dumper.py  dumper_factory.py  exceptions.py  executor.py  executors.py  loader.py  loader_factory.py  logic.py  utils.py
src/assetflow/protocols/: combiner.py  dumper.py  executor.py  loader.py
src/assetflow/utils/: checks.py
src/protocols/: loader.py
test/integration/: loaders.py  test_pipeline.py
tests/unit/protocols/: test_combiner.py  test_dumper.py  test_dumper_factory.py  test_executor.py  test_loader.py  test_loader_factory.py
tests/unit/utils/: test_checks.py
